tests/snapshots/test_runner__tests__compiler__typecheck__enum_6__enum_6.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
class Food = Nut
class Tool = Nut

entry
  let a = Nut;
  ()

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/enum_6/enum_6.kk:5:11
  │
5 │   let a = Nut;
  │           ^^^ Ambiguous Symbol
  │
  = Matching types:

    Food

    Tool

    Put type annotation for disambiguation.
